2011-02-13 v0.2602 pjacklam (1000 tests)
  * Fix spelling errors (Peter John Acklam).
  * Include latest versions test scripts shared with the Math::BigInt
    distribution (Peter John Acklam).
  * Add 00sig.t for testing the SIGNATURE file, 01load.t for explicitly
    testing module loading and showing version information useful for
    debugging (Peter John Acklam).
  * Replace pod.t and pod_cov.t by 02pod.t as a generic script for testing
    POD syntax, and 03podcov.t as a more generic script for testing POD
    coverage (Peter John Acklam).

2010-09-15 v0.26 rafl 975 tests
  * Remove obsolete test boilerplate that was once needed to test within the
    perl core (Nicholas Clark).
  * Convert tests from Test to Test::More (Nicholas Clark).

2010-09-13 v0.25 rafl 975 tests
  * Re-upload 0.24 with a fixed SIGNATURE

2009-09-09 v0.24 Leto 975 tests
  * Fix [perl RT #49565: SIGNATURES]
  * Fix [perl RT #44827: Documentation incorrect]

2009-09-08 v0.23 Leto 975 tests
  * Fix [perl RT #67244] hex "e" misunderstood by Math::BigRat

2008-04-06 v0.22 Tels 973 tests
  * fix bug ##34584: hang when calling exp (Thanx Steve Wills!)
    + broot() normalizes result
    + bexp() works for values like '1/2' (sqrt), '1/4' (broot), etc.
    + broot() works for values like '2/3'
  * added as_float() - return the BigRat as rounded Math::BigFloat

2007-09-16 v0.21 Tels 956 tests
  * require Math::BigInt v1.88
  * fix as_number() with Nan/inf (thanx zefram!)
  * add POD stub for objectify() to make pod_cov.t happy

2007-06-30 v0.20 Tels 956 tests
  * require Math::BigInt v1.87
  * add bnok() and bexp()

2007-04-17 v0.19 Tels 934 tests
  * fix the check in bnorm() as it breaks under Pari
  * require Math::BigInt v1.83
  * exponent() makes a copy, so we can skip copy()
  * fix the licence back to be "perl"

2007-04-09 v0.18 Tels 934 tests
  * install_as_core() to work around Module::Install bug
  * remove PREREQ_FATAL since the toolchain is broken
  * require Math::BigInt v1.82
